# thompson

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  make_clean.sh  make_new_build.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: pytest.yml
docs/figs/source/: index.rst
docs/pages/doctrees/: Background.doctree  Coding quality.doctree  Documentation.doctree  Examples.doctree  Installation.doctree  Tutorials.doctree  environment.pickle  index.doctree  sponsor.doctree  thompson.thompson.doctree
docs/pages/html/: .buildinfo  Background.html  Coding quality.html  Documentation.html  Examples.html  Installation.html  Tutorials.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sponsor.html  thompson.thompson.html
docs/pages/html/_sources/: Background.rst.txt  Coding quality.rst.txt  Documentation.rst.txt  Examples.rst.txt  Installation.rst.txt  index.rst.txt  thompson.thompson.rst.txt
docs/pages/html/_static/: documentation_options.js
docs/source/: Background.rst  Coding quality.rst  Documentation.rst  Examples.rst  Installation.rst  Tutorials.rst  conf.py  index.rst  thompson.thompson.rst
thompson/: __init__.py  examples.py  thompson.py
thompson/tests/: test_thompson.py
